Fixed layout issue

--- a/src/app/core/layout/layout/layout.component.sass
+++ b/src/app/core/layout/layout/layout.component.sass
@@ -8,7 +8,6 @@ $footer-h: 64px
 
 .content
   height: calc(100vh - #{$toolbar-h} - #{$footer-h})
-  box-sizing: border-box
   padding: $toolbar-h 0 $footer-h 0
   min-height: 0
 
