--- a/src/styles/_page-styles.sass
+++ b/src/styles/_page-styles.sass
@@ -12,6 +12,7 @@
     overflow: hidden !important
 
 .drawer-container
-  width: 320px
+  min-width: 320px
   flex: 0 0 320px
   box-sizing: border-box
+
